test/fail/ForCountStmt-action-2.app
//Expression should be of type

application test

  entity Entity {
    
  }

  function home(){
    for(i:Int from Entity{} to 4){
    }
  }